--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
        
     </nav>
     <div class="image">
-      <img src="https://car-images.bauersecure.com/wp-images/2697/taycan_review_050.jpg"  alt="img">
+      <img src="audi.jpg"  alt="immmg">
        <h1 align="center">Explore an Smartcar concept car virtually</h1>
        <h2 align="center">power, comfort, luxury and security at smarCar</h2>
       <a href="#learn" >Learn More</a>
